compile_tests/tests/compile-fail/attr_before_prologue.stderr
error: impl expected
  --> $DIR/attr_before_prologue.rs:21:1
   |
21 | struct Module {}
   | ^^^^^^^^^^^^^^^^

error: lockjaw macro cannot appear before lockjaw::prologue!() (../../../compile_tests/tests/compile-fail/attr_before_prologue.rs:20:0)
  --> $DIR/attr_before_prologue.rs:24:5
   |
24 | /     "../../../compile_tests/tests/compile-fail/attr_before_prologue.rs",
25 | |     ""
   | |______^
   |
   = note: this error originates in the macro `lockjaw::private_prologue` (in Nightly builds, run with -Z macro-backtrace for more info)
